# eda-napari

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  config.json  debug.py  setup.cfg
.github/workflows/: build-and-test.yml
eda_napari/: __init__.py  _updater.py  _widget.py  napari.yaml  plot_stylesheet.mplstyle
examples/: load_times.py
images/steven_192.ome.zarr/EDA/analyser_output/: .zarray
images/steven_192.ome.zarr/EDA/analyser_output/1/: 0
images/steven_192.ome.zarr/EDA/analyser_output/10/: 0
images/steven_192.ome.zarr/EDA/analyser_output/2/: 0
images/steven_192.ome.zarr/EDA/analyser_output/3/: 0
images/steven_192.ome.zarr/EDA/analyser_output/4/: 0
images/steven_192.ome.zarr/EDA/analyser_output/5/: 0
images/steven_192.ome.zarr/EDA/analyser_output/6/: 0
images/steven_192.ome.zarr/EDA/analyser_output/7/: 0
images/steven_192.ome.zarr/EDA/analyser_output/8/: 0
images/steven_192.ome.zarr/EDA/nn_images/: .zarray
images/steven_192.ome.zarr/EDA/parameters/: .zarray  0
images/steven_192.ome.zarr/Images/: .zattrs
images/steven_192.ome.zarr/Images/0/: .zarray
images/steven_192.ome.zarr/Metadata/: MMSettings.json  MM_state.txt  imagej_metadata.json
images/steven_192.ome.zarr/OME/: METADATA.ome.xml
images/steven_5.ome.zarr/: .zattrs
images/steven_5.ome.zarr/EDA/: .zattrs
images/steven_5.ome.zarr/EDA/analyser_output/: .zarray
images/steven_5.ome.zarr/EDA/nn_images/: .zarray
images/steven_5.ome.zarr/Metadata/: MMSettings.json  MM_state.txt
images/steven_5.ome.zarr/OME/: METADATA.ome.xml  METADATA2.ome.xml
images/steven_5_2.ome.zarr/: .zattrs
leb/eda_napari/: __init__.py  _widget.py  napari.yaml  q_label_stylesheet.qss
report/: debug_issues.txt  npe2_complaint.txt
tests/: test.py  test_updater.py  test_widget.py
tmp/: latest.json
tmp/flowcharts/: Dataflow.mmd  Frameragegraph.mmd  Frg_init_data  Timescroller.mmd
(+297 files in other folders)
