[metadata]
name = leb.eda-napari
author = Brown Steven Sinclair, Moreau Elio, Stepp Willi Leopold
author_email = steven.brown@epfl.ch, elio.moreau@epfl.ch, willi.stepp@epfl.ch
license = BSD-3
version = 0.0.1
url = https://github.com/LEB/eda-napari
description = A reader for zarr backed OME-NGFF images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 4 - Beta
	Framework :: napari
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    napari
    napari-aicsimageio
    ome-zarr
    xmltodict
    scikit-image
    pyqtgraph

[options.entry_points]
napari.manifest =
    leb.eda-napari = leb.eda_napari:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    pyqtgraph
